--- a/src/app/auth/register/register.scss
+++ b/src/app/auth/register/register.scss
@@ -21,7 +21,9 @@
 .login-card .form-label {
 	font-weight: 500;
 }
-
+.login-button-container {
+	margin-bottom: 20px;
+}
 .login-card .form-control {
 	background: #1f2633;
 	border: 1px solid #3c4a5f;
