--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -7,8 +7,8 @@ header{
     color: white;
 }
 *{
-    font-family: "Share Tech", sans-serif;
+    font-family: "Science Gothic", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 100;
+    font-weight: 200;
     font-style: normal;
 }
